# cng4

./: .gitignore  Cargo.toml  LICENSE  README.md  cfg.toml  script.toml
backup/: plugin_panels.rs
src/: arguments.rs  consts.rs  globals.rs  handle_panic.rs  main.rs  messages.rs
src/plugins/: mod.rs  plugin_cfg.rs  plugin_cli.rs  plugin_command.rs  plugin_devices.rs  plugin_editor.rs  plugin_gui.rs  plugin_infos.rs  plugin_log.rs  plugin_mqtt.rs  plugin_music.rs  plugin_panels.rs  plugin_ping.rs  plugin_script.rs  plugin_system.rs  plugin_time.rs  plugin_weather.rs  plugin_web.rs  plugin_wol.rs  plugins_main.rs
src/utils/: api.rs  common.rs  ffmpeg.rs  mod.rs  nas.rs  panel.rs  time.rs  weather.rs  yt_dlp.rs
test/: web.sh
utils/: daemon.sh
