[package]
name = "cng4"
version = "0.1.6"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"
log = "0.4.28"
once_cell = "1.21.3"
ratatui = "0.29.0"
regex = "1.11.3"
reqwest = "0.12.23"
rumqttc = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shell-words = "1.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
sysinfo = "0.37.1"
tokio = { version = "1", features = ["full"] }
toml = "0.9.7"
unicode-width = "0.2.0"
walkdir = "2.5.0"
