[package]
name = "cng4"
version = "0.2.3"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"
filetime = "0.2.26"
hex = "0.4.3"
log = "0.4.28"
once_cell = "1.21.3"
ratatui = "0.29.0"
regex = "1.11.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = { version = "0.25.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
shell-words = "1.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
surge-ping = "0.8.2"
sysinfo = "0.37.2"
tokio = { version = "1", features = ["full"] }
toml = "0.9.7"
unicode-width = "0.2.0"
walkdir = "2.5.0"
wol-rs = "1.1.0"
